Added Go back Function

--- a/style.css
+++ b/style.css
@@ -360,3 +360,13 @@ body {
   }
 
   
+  .mybtnn{
+    position: absolute;
+    top: -50px;
+    left: -2px;
+    border: none;
+    background: transparent;
+    color: white;
+    font-size: 1.1rem;
+    cursor: pointer;
+  }
